kubernetes/apps/personal-website/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: personal-website
  labels:
    app: personal-website
spec:
  type: ClusterIP
  selector:
    app: personal-website
  ports:
    - name: http
      port: 80
      targetPort: http
